--- a/blocks/header/__lang-link/_active/header__lang-link_active.css
+++ b/blocks/header/__lang-link/_active/header__lang-link_active.css
@@ -1,10 +1,11 @@
-.header__lang-link_active_enabled {
+.header__lang-link_active {
     width: 30px;
     height: 28px;
+    text-decoration: underline;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
-    .header__lang-link {
+    .header__lang-link_active {
       width: 22px;
       height: 20px;
     }
