--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -2,11 +2,20 @@
   font-size: 1.5em;
   line-height: 1.2;
   color: #fff;
+  width: 29px;
+  height: 28px;
+  text-decoration: none;
+}
+
+.header__lang-link:hover {
+  opacity: .8;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .header__lang-link {
     font-size: 18px;
     line-height: 1.1;
+    width: 22px;
+    height: 20px;
   }
 }
