--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,11 +1,11 @@
-.place__website_link {
+.place__link {
   color: #fff;
   font-size: 18px;
   line-height: 22px;
   margin: 0;
 }
   
-.place__website_link:hover {
+.place__link:hover {
   text-decoration: underline;
   opacity: .8;
 }
