--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,4 +1,4 @@
-.place__website_url-heading {
+.place__url-heading {
   margin: 0;
   padding-bottom: 12px;
   font-size: 12px;
@@ -8,7 +8,7 @@
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1100px) {
-  .place__website_url-heading {
+  .place__url-heading {
     line-height: 20px;
   }
 }
